--- a/Dockerfile_tomcat1
+++ b/Dockerfile_tomcat1
@@ -2,7 +2,7 @@ FROM centos:latest
 RUN yum install java -y
 RUN mkdir /opt/tomcat
 WORKDIR /opt/tomcat
-ADD https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.tar.gz
+ADD https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.71/bin/apache-tomcat-9.0.71.tar.gz .
 RUN tar -xvzf apache-tomcat-9.0.71.tar.gz
 RUN mv apache-tomcat-9.0.71/* /opt/tomcat
 EXPOSE 8080
