--- a/regapp-deploy.yml
+++ b/regapp-deploy.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: regapp
-        image: valaxy/regapp
+        image: kundith/regapp
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
